--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
     </main>
 
     
-        <footer class="footer footer-center p-10 bg-base-200 text-base-content rounded bg-black text-white">
+        <footer class="footer footer-center p-10 bg-base-200 text-base-content  bg-black text-white">
             <div class="flex justify-center">
                 <img src="./images/logo.png" alt="" class="w-8 md:w-12">
                 <h1 class="text-xl md:text-3xl">Fruit Burst</h1>
